# regashii

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  sample.reg
.github/workflows/: main.yaml
examples/: read.rs  round_trip.rs  write.rs
src/: deserialize.rs  error.rs  etc.rs  lib.rs  serialize.rs  wine.rs
src/deserialize/: parse.rs
tests/: complex-regedit4.reg  complex-regedit5.reg  irregular-regedit5.reg  japanese-regedit5.reg  multi-sz-separation-regedit4.reg  multi-sz-separation-regedit5.reg  repetition-regedit5.reg  simple-regedit4.reg  simple-regedit5.reg  wine-v2.reg
