[package]
name = "regashii"
version = "0.3.0"
authors = ["mtkennerly <mtkennerly@gmail.com>"]
edition = "2021"
description = "Read and write Regedit export files"
repository = "https://github.com/mtkennerly/regashii"
readme = "README.md"
license = "MIT"

[dependencies]
nom = "7.1.3"
regex = "1.10.4"
thiserror = "1.0.61"
utf16string = "0.2.0"

[dev-dependencies]
pretty_assertions = "1.4.0"
test-case = "3.3.1"
